# app/Swagger/Schemas/Category.php
@@ -7,7 +7,7 @@ namespace App\Swagger\Schemas;
  *     schema="Category",
  *     type="object",
  *     title="Category",
- *     required={"id", "name", "user_id", "created_at", "updated_at"},
+ *     required={"id", "name"},
  *     @OA\Property(
  *         property="id",
  *         type="integer",
@@ -19,26 +19,6 @@ namespace App\Swagger\Schemas;
  *         type="string",
  *         description="Name of the product category",
  *         example="Electronics"
- *     ),
- *     @OA\Property(
- *         property="user_id",
- *         type="integer",
- *         description="ID of the user who created the category",
- *         example=1
- *     ),
- *     @OA\Property(
- *         property="created_at",
- *         type="string",
- *         format="date-time",
- *         description="Timestamp when the category was created",
- *         example="2023-09-29T12:34:56Z"
- *     ),
- *     @OA\Property(
- *         property="updated_at",
- *         type="string",
- *         format="date-time",
- *         description="Timestamp when the category was last updated",
- *         example="2023-09-29T12:34:56Z"
  *     )
  * )
  */
